# BETeezeTiktokShop

./: .gitignore  Dockerfile  Makefile  README.md  background_processor.py  create_test_tasks.py  ddos.py  docker-compose.yml  ngrok.yml  pyproject.toml  requirements.txt
.github/workflows/: dev_deploy.yml.test  production_deploy.tx
api/: __init__.py  admin.py  helpers.py  models.py  tasks.py  urls.py
api/migrations/: 0001_initial.py  0002_alter_templates_fixed_images.py  0003_alter_designsku_image_back_and_more.py  0004_designsku_mockup_back_designsku_mockup_front_and_more.py  0005_alter_templates_colors_alter_templates_sizes_and_more.py  0006_ckfvariant.py  0007_templates_option1_templates_option2_and_more.py  0008_alter_templates_colors_alter_templates_sizes_and_more.py  0009_templates_images_link_variant.py  0010_alter_templates_images_link_variant.py  0011_shop_shop_description.py  0012_package_created_at_package_seller_and_more.py  0013_rename_mock_up_back_productpackage_mock_up_back_url_and_more.py  0014_package_created_at_package_seller_and_more.py  0015_package_created_at_package_seller_and_more.py  0016_package_created_at_package_seller_and_more.py  0017_package_created_at_package_seller_package_status.py  0018_package_created_at_package_seller_and_more.py  0019_appkey_link_service_package_created_at_and_more.py  0020_package_created_at_package_seller_and_more.py  0021_package_created_at_package_seller_and_more.py  0022_package_created_at_package_seller_and_more.py  0023_package_created_at_package_number_sort_and_more.py  0024_package_created_at_package_seller_and_more.py  0025_templates_attributes_templates_fixed_image_urls_and_more.py  0026_alter_package_seller.py  0027_designsku_created_at_designsku_created_by_and_more.py  0028_alter_usergroup_role_combinelabeltask.py
api/serializers/: __init__.py
api/utils/: auth.py  constant.py  objectcreate.py
api/utils/constants/: order.py  pagination.py  statement.py
api/utils/flashship/: flashshipapi.py
api/utils/google/: dev.json  googleapi.py  oauth_credentials_prod.json  prod.json  service_account.json  token_dev.pickle  token_prod.pickle
api/utils/image_generation/: genimage_urls.py  replace_background.py
api/utils/instagram/: instagram.py
api/utils/pagination/: __init__.py  filter.py  paging.py  sort.py
api/utils/pdf/: download_pdf.py  generate_pdf.py  html_template.py  merge_pdf.py  ocr_pdf.py
api/views/: __init__.py
ci/: nginx.conf  nginx_old.conf
tiktok/: asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
(+28 files in other folders)
